fix alignments of header links in top bar, fixes #5179
Closes #5179

Merge request studip/studip!3935

--- a/resources/assets/stylesheets/scss/header.scss
+++ b/resources/assets/stylesheets/scss/header.scss
@@ -40,6 +40,7 @@
         justify-self: flex-end;
 
         > ul {
+            align-items: center;
             display: flex;
             list-style-type: none;
             gap: 10px;
